# paste_V2_server

./: Cargo.toml
src/: main.rs
src/authentication/: auth.rs  jwt.rs
src/db_config/: copied_data.rs  init_db.rs  user.rs
src/graphql_config/: init_graphql.rs  mutations.rs  queries.rs
