[package]
name = "pastebin_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
async-graphql = "7.0.11"
async-graphql-actix-web = "7.0.11"
jsonwebtoken = "9.3.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls","sqlite","macros" ] }
serde = {version ="1.0.210" , features = ["derive"] }
chrono = "0.4.38"
rand = "0.8.5"
actix-cors = "0.7.0"
futures-util = "0.3.31"
serde_json = "1.0.128"
